--- a/epack-multi-select.html
+++ b/epack-multi-select.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../iron-selector/iron-selector.html">
-<link rel="import" href="../../paper-checkbox/paper-checkbox.html">
+<link rel="import" href="../iron-selector/iron-selector.html">
+<link rel="import" href="../paper-checkbox/paper-checkbox.html">
 
 <dom-module id="epack-multi-select">
   <template>
